# libscry

./: CMakeLists.txt
.github/workflows/: cmake.yml  static.yml
examples/: CMakeLists.txt  pricecheck.cc  simple.cc  test.cc
src/: CMakeLists.txt  card.cc  card.h
